fix the overflow

--- a/keyform/static/keyform/css/add_form.css
+++ b/keyform/static/keyform/css/add_form.css
@@ -2,7 +2,7 @@ div.field-wrapper {
     border-style: solid;
     border-width: 1px;
     border-radius: 5px;
-    overflow: auto;
+    overflow: hidden;
     border-color: lightgray;
 }
 
